# optunity

./: .gitignore  .travis.yml  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  global.rst  index.rst  make.bat  optunity.rst  optunity.test.rst
docs/api/: modules.rst  optunity.api.rst  optunity.communication.rst  optunity.constraints.rst  optunity.cross_validation.rst  optunity.example.rst  optunity.functions.rst  optunity.metrics.rst  optunity.parallel.rst  optunity.piped.rst  optunity.rst  optunity.score_functions.rst  optunity.search_spaces.rst  optunity.solver_registry.rst  optunity.solvers.CMAES.rst  optunity.solvers.GridSearch.rst  optunity.solvers.NelderMead.rst  optunity.solvers.ParticleSwarm.rst  optunity.solvers.RandomSearch.rst  optunity.solvers.Sobol.rst  optunity.solvers.TPE.rst  optunity.solvers.rst  optunity.solvers.solver_registry.rst  optunity.solvers.util.rst  optunity.standalone.rst  optunity.test.functions.rst  optunity.test.rst  optunity.test.solvers.rst  optunity.tests.rst  optunity.tests.test_all.rst  optunity.util.rst
docs/dev/: index.rst
docs/examples/: cross_validation.rst  index.rst
docs/examples/matlab/: lssvmlab.rst
docs/examples/r/: svm.rst  (+3 more)
docs/notebooks/: basic-parabola.rst  index.rst
docs/user/: constraints.rst  cross_validation.rst  functions.rst  index.rst  installation.rst  metrics.rst  overview.rst  score_functions.rst  solvers.rst  structured_search_spaces.rst
docs/wrappers/: index.rst  julia.rst  matlab.rst  octave.rst  r.rst
notebooks/: basic-cross-validation.ipynb  basic-nested-cv.ipynb  basic-parabola.ipynb  basic-sobol.ipynb  generate_static_notebooks.sh  local-optima.ipynb  notebook2sphinx.py  opencv-ocr.ipynb  opencv_utility_functions.py  sklearn-algorithm.ipynb  sklearn-automated-classification.ipynb  sklearn-svc.ipynb  sklearn-svr.ipynb  sklearn-svr.py
optunity/: __init__.py  api.py  communication.py  constraints.py  cross_validation.py  functions.py  metrics.py  parallel.py  piped.py  score_functions.py  search_spaces.py  sockets.py  solver_registry.py  solvers.py  standalone.py  util.py
optunity/solver_implementations/: CMAES.py  CSA.py  GridSearch.py  NelderMead.py  ParticleSwarm.py  RandomSearch.py
optunity/solvers/: BayesOpt.py  CMAES.py  CSA.py  GridSearch.py  NelderMead.py  ParticleSwarm.py  RandomSearch.py  Sobol.py  TPE.py  __init__.py  solver_registry.py  util.py
optunity/test/: cross_validation.py  functions.py  solvers.py
optunity/tests/: test_all.py  test_solvers.py
wrappers/: DESCRIPTION
wrappers/R/: .RData  .Rhistory  .gitignore  DESCRIPTION  NAMESPACE  README.md  README.rst  comm.R  example.R  optunity  optunity.R  pipe_test2.R
wrappers/java/: Test.java
wrappers/julia/: nogc.jl  optunity.jl  runtests.jl  test.jl  test1.jl  test2.jl
wrappers/matlab/: .Rhistory  cv_fun.m  example.m  optunity_example.m
wrappers/octave/: optunity_cv_fun.m  optunity_example.m
(+135 files in other folders)
