[metadata]
name = Optunity
version = 1.1.1
author = Marc Claesen
author_email = marc.claesen@esat.kuleuven.be
license = LICENSE.txt
description = Optimization routines for hyperparameter tuning.
keywords =
    machine learning
    parameter tuning
    hyperparameter optimization
    meta-optimization
    direct search
    model selection
    particle swarm optimization
url = http://www.optunity.net
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Programming Language :: Python
    License :: OSI Approved :: BSD License
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
platforms = any
project_urls =
    Source Code = https://github.com/claesenm/optunity
    Bug Tracker = https://github.com/claesenm/optunity/issues

[options]
packages =
    optunity
    optunity.tests
    optunity.solvers

[bdist_wheel]
universal = 1
